--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --force --prefix client && npm run build --prefix client",
-    "client": "npm run start --prefix ./client"
+   
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    
   },
+
+  "engines": {
+    "node": "16.13.1"
+},
   "author": "Oladimeji Shopeyin",
   "license": "ISC",
   "dependencies": {
