--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:prod": "SET NODE_ENV=production&& server.js",
     "debug": "ndb server.js",
     "dev":"nodemon server.js",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+
   },
   "engines": {
     "node": "16.13.1"
