--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "SET NODE_ENV=production && server.js",
     "debug": "ndb server.js",
     "dev":"nodemon server.js",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
 
   },
   "engines": {
