--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy":  "https://carer-visit.herokuapp.com/",
+  
+  "proxy":  "http://localhost:1000",
+
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
