--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-
+PORT=https://carer-visit.herokuapp.com/
 USERNAME=oladimeji
 DATABASE_PASSWORD=2v2h8Hl2jtGRikEl
 DATABASE_USERNAME=shopeyin
