--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "careplan",
+  "proxy": "http://127.0.0.1:1000",
   "version": "1.0.0",
   "description": "careApp",
   "main": "app.js",
