--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.7",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
